# freelancer-bot

./: README.md  SKILL.md  USAGE.md  pyproject.toml
freelancer_bot/: __init__.py  analytics.py  api.py  bidding.py  cli.py  config.py  contests.py  design.py  email.py  grok.py  llm.py  proposals.py  scoring.py  state.py
