[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freelancer-bot"
version = "2.0.0"
description = "Unified Freelancer.com automation bot — project bidding, tech contests, website design discovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gowtham Krishna Teja"}
]
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "croniter>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
freelancer-bot = "freelancer_bot.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["freelancer_bot"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
